--- a/Test.html
+++ b/Test.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 <title>Hello World!</title>
+<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="pexels-pixabay-2156.jpg" alt="Hello World from Space"
+style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-<p>A new line in our file!</p>
+
 </body>
 </html>
